ui/apps/themes/style.less
/* ... */
@media (max-width: 900px) {

    .io-ox-sidepopup.right, .io-ox-sidepopup.left {
        left: 0; right: 0;
        border-left: 0 none; border-right: 0 none;
        .box-shadow(none);
    }

    .io-ox-sidepopup-arrow {
        display: none;
    }

    .leftside {
        width: 250px;
    }

    .rightside {
        left: 250px;
    }

    .default-content-padding {
        padding: 26px 13px 26px 13px;
    }

    .io-ox-sidepopup-pane {
        top: 35px;

        .default-content-padding {
            padding: 0 13px 13px 13px;
        }

    }

    .io-ox-sidepopup-close {
        margin: 0 13px;
    }

    .simple-window {

        .io-ox-sidepopup {
            position: static;
            min-height: 200px;
        }

        .io-ox-sidepopup-pane {

            position: static;

            .default-content-padding {
                padding-top: 7px;
            }

        }

    }

    .foldertree-sidepanel {
        left: 50px;
    }

}

@media (min-width: 1300px) {

    .leftside {
        width: 400px;
    }

    .rightside {
        left: 400px;
    }

}

@media (min-width: 1500px) {

    .leftside {
        width: 450px;
    }

    .rightside {
        left: 450px;
    }

}

@media (min-width: 1700px) {

    .leftside {
        width: 500px;
    }

    .rightside {
        left: 500px;
    }

}

// TINY SCREENS
@media (max-width: 700px) {

    .window-head {

        top: auto;
        right: 0;
        width: auto;
        height: 40px;
        background-color: #f5f5f5;
        border-top: 1px solid #ddd;
        border-right: 0 none;

        .toolbar-button {

            line-height: 44px;
            float: left;
            margin: 0;

            & > a {
                height: 40px;
            }
        }

        .dropdown-right-side {
            top: auto;
            bottom: 40px;
            left: 5px;
        }

    }

    .window-sidepanel.visible {
        bottom: 40px;
        width: auto;
        right: 0;
    }

    .window-body {
        bottom: 40px;
        left: 0;
    }

    .chromeless-window .window-body {
        bottom: 0;
    }

    .window-container.toolbar-right {

        .window-head {
            left: 0;
        }
        .window-body {
            right: 0;
        }

    }

    .vsplit {
        left: 0; width: 200%; right: auto;
        -webkit-animation-timing-function: ease-out;
        -webkit-animation-duration: 350ms;
        animation-timing-function: ease-out;
        animation-duration: 350ms;
    }

    .vsplit-slide {
        -webkit-transform: translateX(-50%);
        -webkit-animation-name: slideright;
        transform: translateX(-50%);
        animation-name: slideright;
    }

    .vsplit-reverse {
        -webkit-transform: translateX(0);
        -webkit-animation-name: slideleft;
        transform: translateX(0);
        animation-name: slideleft;
    }

    .touch .vsplit {
        -webkit-backface-visibility: hidden;
    }

    .vsplit .leftside {
        width: 50%;
        right: auto;
        z-index: 1;
    }

    .vsplit .rightside {
        left: 50%;
        width: 50%;
        top: 41px;
        right: auto;
        z-index: 2;
    }

    .vsplit .rightside-navbar {
        position: absolute;
        top: 0;
        left: 50%;
        width: 50%;
        height: 41px;
        background-color: @white;
        border-bottom: 1px solid #ccc;
        padding: 5px 13px 5px 13px;
        z-index: 2;
        line-height: 2em;
        display: block;
    }

    .vsplit-reverse {

        .rightside-navbar, .rightside {
            display:none;
        }

    }

    .input-medium.search-query {
        width: 80px;
    }

    .foldertree-sidepanel {
        left: 0;
    }
}

// landscape fullscreen on iPhone
// iOS will go fullscreen and show an overaly with own buttons
// we need to position our buttons around them
@media (height: 320px) and (orientation:landscape) {

    .window-head {

        padding-right: 40px;

        .toolbar-button {
            float: right;
        }

    }

}
/* ... */

